--- a/style.css
+++ b/style.css
@@ -262,6 +262,11 @@
         color: rgb(134, 6, 57);
      }
 
+     footer .col .button {
+         set-decoration: none;
+     }
+
+
      footer .copyright{
         width: 100%;
         text-align: center
