--- a/style.css
+++ b/style.css
@@ -263,10 +263,10 @@
      }
 
      footer .col button {
-         set-decoration: none;
+         text-decoration: none;
      }
      footer .col a {
-         set-decoration: none;
+         text-decoration: none;
      }
 
 
